Fix FindBugs errors